--- a/Sesion-04/Ejemplo-04/dataframes.ipynb
+++ b/Sesion-04/Ejemplo-04/dataframes.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,90 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>columna_1</th>\n",
-       "      <th>columna_2</th>\n",
-       "      <th>columna_3</th>\n",
-       "      <th>columna_4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>valor_fila_0</td>\n",
-       "      <td>valor_fila_0</td>\n",
-       "      <td>valor_fila_0</td>\n",
-       "      <td>valor_fila_0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>valor_fila_1</td>\n",
-       "      <td>valor_fila_1</td>\n",
-       "      <td>valor_fila_1</td>\n",
-       "      <td>valor_fila_1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>valor_fila_2</td>\n",
-       "      <td>valor_fila_2</td>\n",
-       "      <td>valor_fila_2</td>\n",
-       "      <td>valor_fila_2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>valor_fila_3</td>\n",
-       "      <td>valor_fila_3</td>\n",
-       "      <td>valor_fila_3</td>\n",
-       "      <td>valor_fila_3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>valor_fila_4</td>\n",
-       "      <td>valor_fila_4</td>\n",
-       "      <td>valor_fila_4</td>\n",
-       "      <td>valor_fila_4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      columna_1     columna_2     columna_3     columna_4\n",
-       "0  valor_fila_0  valor_fila_0  valor_fila_0  valor_fila_0\n",
-       "1  valor_fila_1  valor_fila_1  valor_fila_1  valor_fila_1\n",
-       "2  valor_fila_2  valor_fila_2  valor_fila_2  valor_fila_2\n",
-       "3  valor_fila_3  valor_fila_3  valor_fila_3  valor_fila_3\n",
-       "4  valor_fila_4  valor_fila_4  valor_fila_4  valor_fila_4"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.DataFrame(datos)\n",
     "\n",
@@ -155,90 +74,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>columna_1</th>\n",
-       "      <th>columna_2</th>\n",
-       "      <th>columna_3</th>\n",
-       "      <th>columna_4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>a</th>\n",
-       "      <td>valor_fila_0</td>\n",
-       "      <td>valor_fila_0</td>\n",
-       "      <td>valor_fila_0</td>\n",
-       "      <td>valor_fila_0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>b</th>\n",
-       "      <td>valor_fila_1</td>\n",
-       "      <td>valor_fila_1</td>\n",
-       "      <td>valor_fila_1</td>\n",
-       "      <td>valor_fila_1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>c</th>\n",
-       "      <td>valor_fila_2</td>\n",
-       "      <td>valor_fila_2</td>\n",
-       "      <td>valor_fila_2</td>\n",
-       "      <td>valor_fila_2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>d</th>\n",
-       "      <td>valor_fila_3</td>\n",
-       "      <td>valor_fila_3</td>\n",
-       "      <td>valor_fila_3</td>\n",
-       "      <td>valor_fila_3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>e</th>\n",
-       "      <td>valor_fila_4</td>\n",
-       "      <td>valor_fila_4</td>\n",
-       "      <td>valor_fila_4</td>\n",
-       "      <td>valor_fila_4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      columna_1     columna_2     columna_3     columna_4\n",
-       "a  valor_fila_0  valor_fila_0  valor_fila_0  valor_fila_0\n",
-       "b  valor_fila_1  valor_fila_1  valor_fila_1  valor_fila_1\n",
-       "c  valor_fila_2  valor_fila_2  valor_fila_2  valor_fila_2\n",
-       "d  valor_fila_3  valor_fila_3  valor_fila_3  valor_fila_3\n",
-       "e  valor_fila_4  valor_fila_4  valor_fila_4  valor_fila_4"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.DataFrame(datos, index=['a', 'b', 'c', 'd', 'e'])\n",
     "\n",
@@ -254,25 +92,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "a    valor_fila_0\n",
-       "b    valor_fila_1\n",
-       "c    valor_fila_2\n",
-       "d    valor_fila_3\n",
-       "e    valor_fila_4\n",
-       "Name: columna_1, dtype: object"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df['columna_1']"
    ]
@@ -288,78 +110,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>columna_3</th>\n",
-       "      <th>columna_1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>a</th>\n",
-       "      <td>valor_fila_0</td>\n",
-       "      <td>valor_fila_0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>b</th>\n",
-       "      <td>valor_fila_1</td>\n",
-       "      <td>valor_fila_1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>c</th>\n",
-       "      <td>valor_fila_2</td>\n",
-       "      <td>valor_fila_2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>d</th>\n",
-       "      <td>valor_fila_3</td>\n",
-       "      <td>valor_fila_3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>e</th>\n",
-       "      <td>valor_fila_4</td>\n",
-       "      <td>valor_fila_4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      columna_3     columna_1\n",
-       "a  valor_fila_0  valor_fila_0\n",
-       "b  valor_fila_1  valor_fila_1\n",
-       "c  valor_fila_2  valor_fila_2\n",
-       "d  valor_fila_3  valor_fila_3\n",
-       "e  valor_fila_4  valor_fila_4"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df[['columna_3', 'columna_1']]"
    ]
@@ -382,24 +135,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "columna_1    valor_fila_0\n",
-       "columna_2    valor_fila_0\n",
-       "columna_3    valor_fila_0\n",
-       "columna_4    valor_fila_0\n",
-       "Name: a, dtype: object"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.loc['a']"
    ]
@@ -413,66 +151,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>columna_1</th>\n",
-       "      <th>columna_2</th>\n",
-       "      <th>columna_3</th>\n",
-       "      <th>columna_4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>c</th>\n",
-       "      <td>valor_fila_2</td>\n",
-       "      <td>valor_fila_2</td>\n",
-       "      <td>valor_fila_2</td>\n",
-       "      <td>valor_fila_2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>a</th>\n",
-       "      <td>valor_fila_0</td>\n",
-       "      <td>valor_fila_0</td>\n",
-       "      <td>valor_fila_0</td>\n",
-       "      <td>valor_fila_0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      columna_1     columna_2     columna_3     columna_4\n",
-       "c  valor_fila_2  valor_fila_2  valor_fila_2  valor_fila_2\n",
-       "a  valor_fila_0  valor_fila_0  valor_fila_0  valor_fila_0"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.loc[['c', 'a']]"
    ]
@@ -486,156 +167,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>columna_1</th>\n",
-       "      <th>columna_2</th>\n",
-       "      <th>columna_3</th>\n",
-       "      <th>columna_4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>b</th>\n",
-       "      <td>valor_fila_1</td>\n",
-       "      <td>valor_fila_1</td>\n",
-       "      <td>valor_fila_1</td>\n",
-       "      <td>valor_fila_1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>c</th>\n",
-       "      <td>valor_fila_2</td>\n",
-       "      <td>valor_fila_2</td>\n",
-       "      <td>valor_fila_2</td>\n",
-       "      <td>valor_fila_2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>d</th>\n",
-       "      <td>valor_fila_3</td>\n",
-       "      <td>valor_fila_3</td>\n",
-       "      <td>valor_fila_3</td>\n",
-       "      <td>valor_fila_3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>e</th>\n",
-       "      <td>valor_fila_4</td>\n",
-       "      <td>valor_fila_4</td>\n",
-       "      <td>valor_fila_4</td>\n",
-       "      <td>valor_fila_4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      columna_1     columna_2     columna_3     columna_4\n",
-       "b  valor_fila_1  valor_fila_1  valor_fila_1  valor_fila_1\n",
-       "c  valor_fila_2  valor_fila_2  valor_fila_2  valor_fila_2\n",
-       "d  valor_fila_3  valor_fila_3  valor_fila_3  valor_fila_3\n",
-       "e  valor_fila_4  valor_fila_4  valor_fila_4  valor_fila_4"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.loc['b':]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>columna_1</th>\n",
-       "      <th>columna_2</th>\n",
-       "      <th>columna_3</th>\n",
-       "      <th>columna_4</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>b</th>\n",
-       "      <td>valor_fila_1</td>\n",
-       "      <td>valor_fila_1</td>\n",
-       "      <td>valor_fila_1</td>\n",
-       "      <td>valor_fila_1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>c</th>\n",
-       "      <td>valor_fila_2</td>\n",
-       "      <td>valor_fila_2</td>\n",
-       "      <td>valor_fila_2</td>\n",
-       "      <td>valor_fila_2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>d</th>\n",
-       "      <td>valor_fila_3</td>\n",
-       "      <td>valor_fila_3</td>\n",
-       "      <td>valor_fila_3</td>\n",
-       "      <td>valor_fila_3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      columna_1     columna_2     columna_3     columna_4\n",
-       "b  valor_fila_1  valor_fila_1  valor_fila_1  valor_fila_1\n",
-       "c  valor_fila_2  valor_fila_2  valor_fila_2  valor_fila_2\n",
-       "d  valor_fila_3  valor_fila_3  valor_fila_3  valor_fila_3"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.loc['b':'d']"
    ]
@@ -649,20 +192,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'valor_fila_1'"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.loc['b', 'columna_2']"
    ]
@@ -676,60 +208,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>columna_4</th>\n",
-       "      <th>columna_2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>e</th>\n",
-       "      <td>valor_fila_4</td>\n",
-       "      <td>valor_fila_4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>c</th>\n",
-       "      <td>valor_fila_2</td>\n",
-       "      <td>valor_fila_2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      columna_4     columna_2\n",
-       "e  valor_fila_4  valor_fila_4\n",
-       "c  valor_fila_2  valor_fila_2"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.loc[['e', 'c'], ['columna_4', 'columna_2']]"
    ]
@@ -744,9 +225,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (data_science)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "data_science"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -758,7 +239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
