--- a/Sesion-04/Ejemplo-05/manipulacion_de_columnas.ipynb
+++ b/Sesion-04/Ejemplo-05/manipulacion_de_columnas.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,84 +49,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Nombre</th>\n",
-       "      <th>Cereal favorito</th>\n",
-       "      <th>Hora del desayuno</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Pepinillo Hernández</td>\n",
-       "      <td>Korn Floks</td>\n",
-       "      <td>11:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Lúpulo de Dios</td>\n",
-       "      <td>Verdurinis</td>\n",
-       "      <td>07:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Juan Juon</td>\n",
-       "      <td>Zumbaritas</td>\n",
-       "      <td>07:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Jimmy el Patatas</td>\n",
-       "      <td>Diabetukis, Papá</td>\n",
-       "      <td>08:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Lorenzo Retaguardias</td>\n",
-       "      <td>Fibra Máxima 3000</td>\n",
-       "      <td>09:30</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 Nombre    Cereal favorito Hora del desayuno\n",
-       "0   Pepinillo Hernández         Korn Floks             11:00\n",
-       "1        Lúpulo de Dios         Verdurinis             07:30\n",
-       "2             Juan Juon         Zumbaritas             07:00\n",
-       "3      Jimmy el Patatas   Diabetukis, Papá             08:30\n",
-       "4  Lorenzo Retaguardias  Fibra Máxima 3000             09:30"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df"
    ]
@@ -140,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,97 +74,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Nombre</th>\n",
-       "      <th>Cereal favorito</th>\n",
-       "      <th>Hora del desayuno</th>\n",
-       "      <th>Fruta con la que acompaña el cereal</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Pepinillo Hernández</td>\n",
-       "      <td>Korn Floks</td>\n",
-       "      <td>11:00</td>\n",
-       "      <td>Pera</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Lúpulo de Dios</td>\n",
-       "      <td>Verdurinis</td>\n",
-       "      <td>07:30</td>\n",
-       "      <td>Manzana</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Juan Juon</td>\n",
-       "      <td>Zumbaritas</td>\n",
-       "      <td>07:00</td>\n",
-       "      <td>Plátano</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Jimmy el Patatas</td>\n",
-       "      <td>Diabetukis, Papá</td>\n",
-       "      <td>08:30</td>\n",
-       "      <td>Guayaba</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Lorenzo Retaguardias</td>\n",
-       "      <td>Fibra Máxima 3000</td>\n",
-       "      <td>09:30</td>\n",
-       "      <td>Pizza</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 Nombre    Cereal favorito Hora del desayuno  \\\n",
-       "0   Pepinillo Hernández         Korn Floks             11:00   \n",
-       "1        Lúpulo de Dios         Verdurinis             07:30   \n",
-       "2             Juan Juon         Zumbaritas             07:00   \n",
-       "3      Jimmy el Patatas   Diabetukis, Papá             08:30   \n",
-       "4  Lorenzo Retaguardias  Fibra Máxima 3000             09:30   \n",
-       "\n",
-       "  Fruta con la que acompaña el cereal  \n",
-       "0                                Pera  \n",
-       "1                             Manzana  \n",
-       "2                             Plátano  \n",
-       "3                             Guayaba  \n",
-       "4                               Pizza  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df"
    ]
@@ -253,97 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Nombre</th>\n",
-       "      <th>Cereal favorito</th>\n",
-       "      <th>Hora del desayuno</th>\n",
-       "      <th>Fruta con la que acompaña el cereal</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Pepinillo Hernández</td>\n",
-       "      <td>Korn Floks</td>\n",
-       "      <td>10:30</td>\n",
-       "      <td>Pera</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Lúpulo de Dios</td>\n",
-       "      <td>Verdurinis</td>\n",
-       "      <td>06:30</td>\n",
-       "      <td>Manzana</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Juan Juon</td>\n",
-       "      <td>Zumbaritas</td>\n",
-       "      <td>06:00</td>\n",
-       "      <td>Plátano</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Jimmy el Patatas</td>\n",
-       "      <td>Diabetukis, Papá</td>\n",
-       "      <td>07:00</td>\n",
-       "      <td>Guayaba</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Lorenzo Retaguardias</td>\n",
-       "      <td>Fibra Máxima 3000</td>\n",
-       "      <td>08:00</td>\n",
-       "      <td>Pizza</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 Nombre    Cereal favorito Hora del desayuno  \\\n",
-       "0   Pepinillo Hernández         Korn Floks             10:30   \n",
-       "1        Lúpulo de Dios         Verdurinis             06:30   \n",
-       "2             Juan Juon         Zumbaritas             06:00   \n",
-       "3      Jimmy el Patatas   Diabetukis, Papá             07:00   \n",
-       "4  Lorenzo Retaguardias  Fibra Máxima 3000             08:00   \n",
-       "\n",
-       "  Fruta con la que acompaña el cereal  \n",
-       "0                                Pera  \n",
-       "1                             Manzana  \n",
-       "2                             Plátano  \n",
-       "3                             Guayaba  \n",
-       "4                               Pizza  "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df[\"Hora del desayuno\"] = pd.Series([\"10:30\", \"06:30\", \"06:00\", \"07:00\", \"08:00\"])\n",
     "\n",
@@ -359,84 +108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Nombre</th>\n",
-       "      <th>Cereal favorito</th>\n",
-       "      <th>Hora del desayuno</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Pepinillo Hernández</td>\n",
-       "      <td>Korn Floks</td>\n",
-       "      <td>10:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Lúpulo de Dios</td>\n",
-       "      <td>Verdurinis</td>\n",
-       "      <td>06:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Juan Juon</td>\n",
-       "      <td>Zumbaritas</td>\n",
-       "      <td>06:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Jimmy el Patatas</td>\n",
-       "      <td>Diabetukis, Papá</td>\n",
-       "      <td>07:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Lorenzo Retaguardias</td>\n",
-       "      <td>Fibra Máxima 3000</td>\n",
-       "      <td>08:00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 Nombre    Cereal favorito Hora del desayuno\n",
-       "0   Pepinillo Hernández         Korn Floks             10:30\n",
-       "1        Lúpulo de Dios         Verdurinis             06:30\n",
-       "2             Juan Juon         Zumbaritas             06:00\n",
-       "3      Jimmy el Patatas   Diabetukis, Papá             07:00\n",
-       "4  Lorenzo Retaguardias  Fibra Máxima 3000             08:00"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.drop(columns=['Fruta con la que acompaña el cereal'])"
    ]
@@ -450,97 +124,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Nombre</th>\n",
-       "      <th>Cereal favorito</th>\n",
-       "      <th>Hora del desayuno</th>\n",
-       "      <th>Fruta con la que acompaña el cereal</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Pepinillo Hernández</td>\n",
-       "      <td>Korn Floks</td>\n",
-       "      <td>10:30</td>\n",
-       "      <td>Pera</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Lúpulo de Dios</td>\n",
-       "      <td>Verdurinis</td>\n",
-       "      <td>06:30</td>\n",
-       "      <td>Manzana</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Juan Juon</td>\n",
-       "      <td>Zumbaritas</td>\n",
-       "      <td>06:00</td>\n",
-       "      <td>Plátano</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Jimmy el Patatas</td>\n",
-       "      <td>Diabetukis, Papá</td>\n",
-       "      <td>07:00</td>\n",
-       "      <td>Guayaba</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Lorenzo Retaguardias</td>\n",
-       "      <td>Fibra Máxima 3000</td>\n",
-       "      <td>08:00</td>\n",
-       "      <td>Pizza</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 Nombre    Cereal favorito Hora del desayuno  \\\n",
-       "0   Pepinillo Hernández         Korn Floks             10:30   \n",
-       "1        Lúpulo de Dios         Verdurinis             06:30   \n",
-       "2             Juan Juon         Zumbaritas             06:00   \n",
-       "3      Jimmy el Patatas   Diabetukis, Papá             07:00   \n",
-       "4  Lorenzo Retaguardias  Fibra Máxima 3000             08:00   \n",
-       "\n",
-       "  Fruta con la que acompaña el cereal  \n",
-       "0                                Pera  \n",
-       "1                             Manzana  \n",
-       "2                             Plátano  \n",
-       "3                             Guayaba  \n",
-       "4                               Pizza  "
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_dropped = df.drop(columns=['Fruta con la que acompaña el cereal'])\n",
     "\n",
@@ -549,84 +135,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Nombre</th>\n",
-       "      <th>Cereal favorito</th>\n",
-       "      <th>Hora del desayuno</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Pepinillo Hernández</td>\n",
-       "      <td>Korn Floks</td>\n",
-       "      <td>10:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Lúpulo de Dios</td>\n",
-       "      <td>Verdurinis</td>\n",
-       "      <td>06:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Juan Juon</td>\n",
-       "      <td>Zumbaritas</td>\n",
-       "      <td>06:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Jimmy el Patatas</td>\n",
-       "      <td>Diabetukis, Papá</td>\n",
-       "      <td>07:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Lorenzo Retaguardias</td>\n",
-       "      <td>Fibra Máxima 3000</td>\n",
-       "      <td>08:00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 Nombre    Cereal favorito Hora del desayuno\n",
-       "0   Pepinillo Hernández         Korn Floks             10:30\n",
-       "1        Lúpulo de Dios         Verdurinis             06:30\n",
-       "2             Juan Juon         Zumbaritas             06:00\n",
-       "3      Jimmy el Patatas   Diabetukis, Papá             07:00\n",
-       "4  Lorenzo Retaguardias  Fibra Máxima 3000             08:00"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_dropped"
    ]
@@ -634,9 +145,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (data_science)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "data_science"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -648,7 +159,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
